[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
banner = "0.0.4"
colored = "3.0.0"
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
dotenv = "0.15.0"
reqwest = { version = "0.12.12", features = ["json", "blocking"] }
serde = "1.0.217"
rocket = "0.5.1"
moonbois_core = { path = "../core" }
spl-associated-token-account = "6.0.0"
serde_json = "1.0.138"
solana-client = "2.1.11"
solana-sdk = "2.1.11"
tokio-tungstenite = "0.26.2"
thiserror = "2.0.11"
url = "2.5.4"
tokio = "1.43.0"
crossterm = "0.28.1"
spinoff = "0.8.0"
